--- a/Image Album.vbproj
+++ b/Image Album.vbproj
@@ -128,5 +128,6 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
